--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = typress/dataset/eq_query_rec
 	url = https://github.com/sjfhsjfh/eq_query_rec
 	branch = typress
+[submodule "typress/dataset/tex2typ"]
+	path = typress/dataset/tex2typ
+	url = https://github.com/paran3xus/tex2typ
+	branch = main
