--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
+blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
+click==8.1.7
 filelock==3.15.4
+Flask==3.0.3
 fsspec==2024.6.1
 huggingface-hub==0.24.1
 idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
 numpy==2.0.1
 packaging==24.1
 pillow==10.4.0
+python-dotenv==1.0.1
 PyYAML==6.0.1
 regex==2024.5.15
 requests==2.32.3
@@ -17,3 +24,4 @@ transformers==4.43.1
 typing_extensions==4.12.2
 typst==0.11.1
 urllib3==2.2.2
+Werkzeug==3.0.3
