--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ transformers = "^4.43.3"
 typst = "^0.11.1"
 jiwer = "^3.0.4"
 opencv-python = "^4.10.0.84"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
