--- a/typress/app/frontend/package.json
+++ b/typress/app/frontend/package.json
@@ -14,6 +14,7 @@
     "@heroicons/vue": "^2.1.5",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
     "vue": "^3.5.12",
