--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "evaluate>=0.4.3",
     "typst>=0.12.2",
+    "my-unimernet",
 ]
 
 [dependency-groups]
@@ -27,3 +28,6 @@ dev = [
     "ipywidgets>=8.1.5",
     "jiwer>=3.0.5",
 ]
+
+[tool.uv.sources]
+my-unimernet = { git = "https://github.com/paran3xus/my-unimernet" }
