feat: multi eval dataset

--- a/typress/train_config.example.json
+++ b/typress/train_config.example.json
@@ -2,7 +2,9 @@
     "model": "",
     "dataset": {
         "train": "",
-        "eval": ""
+        "eval": [
+            ""
+        ]
     },
     "params": {
         "epoches": 1,
